--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@redux-devtools/extension": "^3.2.2",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "connected-react-router": "^6.9.2",
     "dayjs": "^1.11.1",
     "http-proxy-middleware": "^2.0.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
