--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.6.2",
     "@redux-devtools/extension": "^3.2.2",
